Make button jump to all courses section and fix type in advanced css card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,11 @@ ul {
     background-color: rgb(0, 41, 99);
 }
 
+/* Push all courses down */
+#all-courses {
+    padding-top: 6.3rem;
+}
+
 /* Media query: tablet screen sizes (768px and larger) */
 @media screen and (min-width: 768px) {
     /* Increase header text size */
